# faiss-test-cpp

./: .dockerignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  build_mac.sh
faiss-index/: CMakeLists.txt
faiss-index/include/: constants.h  grpc_server.h  service.h  vector_db.h
faiss-index/proto/: faiss.proto  query_vector.proto
faiss-index/src/: grpc_server.cpp  main.cpp  service.cpp  vector_db.cpp
faiss-index/src/client/: main.cpp
faiss-index/src/server/: main.cpp
